# hp11em

./: .clang_complete  .gcc-flags.json  .gitignore  ChangeLog  Makefile.am  Makefile.in  PKGBUILD  README  README.md  aclocal.m4  com.rapgenic.hp11em.json  config.h.in  config.h.in~  configure  configure.ac  generate_resources.sh  hp11em.cmb  meson.build
.flatpak-builder/checksums/: x86_64-com.rapgenic.hp11em.json
.flatpak-builder/git/file_var_home_ggirardi_Devel_Rapgenic_hp11em/: config
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: com.rapgenic.hp11em.appdata.xml.in  com.rapgenic.hp11em.desktop.in  com.rapgenic.hp11em.gschema.xml  meson.build
data/icons/: meson.build
images/: hp11c.xpm  hp11em640.xpm  icon.xpm
po/: POTFILES  meson.build
src/: AMS.cpp  AMS.h  SR.cpp  SR.h  application.c  application.h  backwindow.cpp  backwindow.h  calcdrawarea.cpp  calcdrawarea.h  colors.h  config.h  core.cpp  core.h  core_math.cpp  coreautosave.h  debugwindow.cpp  debugwindow.h  dispdrawarea.cpp  dispdrawarea.h  displaymodule.cpp  displaymodule.h  displayproto_t.h  flags.cpp  flags.h  hp11em.gresource.xml  hpresources.cpp  hpresources.h  hpresources_external.c  hpresources_external.h  key.c  key.h  key.ui  keys.cpp  keys.h  main.c  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  (+9 more)
src/nonpareil/: arch.c  arch.h  coconut_lcd.h  digit_ops.h  dis_nut.c  dis_nut.h  dis_woodstock.c  dis_woodstock.h  display.h  glib_async_queue_source.h  helios.h  helios_chargen.c  meson.build  mod1_file.h  model.h  phineas.h  platform.h  proc.c  proc.h  proc_int.h  proc_nut.c  proc_nut.h  proc_woodstock.h  util.c  util.h
